# VeilVault

./: README.md
VeilVault/: ARCHITECTURE.md  Anchor.toml  LICENSE  PROJECT_SUMMARY.md  README.md  package.json  vercel.json
VeilVault/app/: next.config.js  package.json
VeilVault/app/app/: layout.tsx  page.tsx
VeilVault/app/app/metrics/: page.tsx
VeilVault/app/components/: WalletContextProvider.tsx
VeilVault/app/idl/: veilvault.json
VeilVault/app/utils/: zkProof.ts
VeilVault/programs/veilvault/: Cargo.toml
VeilVault/programs/veilvault/src/: lib.rs
VeilVault/scripts/: deploy.sh  setup-devnet.sh
VeilVault/tests/: veilvault.ts
