[package]
name = "veilvault"
version = "0.1.0"
description = "VeilVault - Anonymous RWA Vaults on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "veilvault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
light-sdk = { version = "0.3.0", optional = true }

